--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
     "js-cookie": "^3.0.1",
+    "jwchat": "^1.0.11",
     "qs": "^6.11.0",
     "three": "^0.121.0",
     "vanta": "^0.5.22",
