完成聊天页面实时消息功能 用户端基本完成

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.15.9",
     "js-cookie": "^3.0.1",
     "jwchat": "^1.0.11",
+    "mavon-editor": "^2.10.4",
     "qs": "^6.11.0",
     "three": "^0.121.0",
     "vanta": "^0.5.22",
